# 14795-final-project

./: README.md  apply_label.ipynb  inspect_data.ipynb  main.py  pyproject.toml
data/: data_50k.csv
